--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@dimforge/rapier3d": "^0.2.2"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-wasm": "^5.1.0",
-    "rollup": "^2.32.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "snowpack": "^2.14.3",
+    "snowpack-plugin-wasm": "file:///Users/duane/tmp/snowpack-plugin-wasm"
   },
   "scripts": {
-    "build": "rollup -c"
+    "start": "snowpack dev",
+    "build": "snowpack build"
   }
 }
